--- a/index.html
+++ b/index.html
@@ -130,9 +130,87 @@
             <h1 class="section-title">Featured Portofolios</h1>
 
             <div class="grid-3">
+                <!-- Portofolio 1 -->
                 <div class="portofolio">
                     <div class="portofolio-cover">
+                        <img src="img/portofolio/" alt="portofolio 1">
+                    </div>
 
+                    <div class="portofolio-info">
+                        <div class="portofolio-title">
+                            <h4>Agency Website</h4>
+                            <a href="#" class="portofolio-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-6 17c1.513-6.587 7-7.778 7-7.778v-2.222l5 4.425-5 4.464v-2.223c0 .001-3.78-.114-7 3.334z" />
+                                </svg>
+                            </a>
+
+                            <div class="portofolio-tags">
+                                <div>React</div>
+                                <div>Tailwinds</div>
+                            </div>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugit ratione totam neque
+                                nobis animi, eius unde eum in, ex nemo consequatur aliquam perspiciatis culpa?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portofolio 2 -->
+                <div class="portofolio">
+                    <div class="portofolio-cover">
+                        <img src="img/portofolio/" alt="portofolio 2">
+                    </div>
+
+                    <div class="portofolio-info">
+                        <div class="portofolio-title">
+                            <h4>Agency Website</h4>
+                            <a href="#" class="portofolio-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-6 17c1.513-6.587 7-7.778 7-7.778v-2.222l5 4.425-5 4.464v-2.223c0 .001-3.78-.114-7 3.334z" />
+                                </svg>
+                            </a>
+
+                            <div class="portofolio-tags">
+                                <div>React</div>
+                                <div>Tailwinds</div>
+                            </div>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugit ratione totam neque
+                                nobis animi, eius unde eum in, ex nemo consequatur aliquam perspiciatis culpa?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Portofolio 3 -->
+                <div class="portofolio">
+                    <div class="portofolio-cover">
+                        <img src="img/portofolio/" alt="portofolio 3">
+                    </div>
+
+                    <div class="portofolio-info">
+                        <div class="portofolio-title">
+                            <h4>Agency Website</h4>
+                            <a href="#" class="portofolio-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-6 17c1.513-6.587 7-7.778 7-7.778v-2.222l5 4.425-5 4.464v-2.223c0 .001-3.78-.114-7 3.334z" />
+                                </svg>
+                            </a>
+
+                            <div class="portofolio-tags">
+                                <div>React</div>
+                                <div>Tailwinds</div>
+                            </div>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugit ratione totam neque
+                                nobis animi, eius unde eum in, ex nemo consequatur aliquam perspiciatis culpa?
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
