--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </p>
             </div>
             <div class="hero-right">
-                <img src="img/manusia.png" alt="Person Standing">
+                <img src="img/manusia.png" width="20%" height="60%" alt="Person Standing">
             </div>
         </section>
 
@@ -216,6 +216,28 @@
         </div>
     </section>
     <!-- End Portofolio -->
+
+    <!-- Skills -->
+    <section id="skills">
+        <div class="skills main-container">
+            <h3 class="pre-title">Learning Path</h3>
+            <h1 class="section-title">Skills & Education</h1>
+
+            <div class="skills-grid">
+                <div class="skills-left">
+                    <div class="education">
+                        <div class="line">
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="skills-right">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Skills -->
 </body>
 
 </html>
