--- a/index.html
+++ b/index.html
@@ -225,19 +225,76 @@
 
             <div class="skills-grid">
                 <div class="skills-left">
+                    <!-- Education - 1 -->
                     <div class="education">
                         <div class="line">
                             <div></div>
                         </div>
+
+                        <div class="education-title">
+                            <h4 class="education-title">Politeknik PGRI Banten</h4>
+                            <p>D3 - Manajemen Informatika</p>
+                            <h4 class="education-years">2018 - 2021</h4>
+                        </div>
+                    </div>
+                    <!-- Education 2 -->
+                    <div class="education">
+                        <div class="line">
+                            <div></div>
+                        </div>
+
+                        <div class="education-title">
+                            <h4 class="education-title">Politeknik PGRI Banten</h4>
+                            <p>D3 - Manajemen Informatika</p>
+                            <h4 class="education-years">2018 - 2021</h4>
+                        </div>
+                    </div>
+
+                    <!-- Education 3 -->
+                    <div class="education">
+                        <div class="line">
+                            <div></div>
+                        </div>
+
+                        <div class="education-title">
+                            <h4 class="education-title">Politeknik PGRI Banten</h4>
+                            <p>D3 - Manajemen Informatika</p>
+                            <h4 class="education-years">2018 - 2021</h4>
+                        </div>
                     </div>
                 </div>
                 <div class="skills-right">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eaque nemo voluptatem possimus
+                        odit itaque aperiam ea nisi blanditiis exercitationem? Sit autem voluptatibus ut porro?</p>
 
+
+                    <div class="skills-list">
+                        <ul>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                        </ul>
+
+                        <ul>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                            <li>test1</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- End Skills -->
+
+    <!-- Contact -->
+    <!-- End Contact -->
 </body>
 
 </html>
